@@ -1,3 +1,9 @@
+2011-04-08  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-shr-97.patch: New file. Replace ...
+	* binutils-shr-96.patch: This. Removed.
+	* README: Likewise.
+
 2011-03-12  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-lto-mixed-13.patch: New file. Replace ...
